k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-player
  labels:
    name: music-player
